--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">基本资料</a></dd>
-                        <dd><a href="javascript:;">更换头像</a></dd>
-                        <dd><a href="javascript:;">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a></li>
+                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span
+                            class="iconfont icon-tuichu"></span>退出</a></li>
             </ul>
         </div>
 
@@ -47,34 +48,38 @@
                     <span id="welcome">欢迎***</span>
                 </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                 <!-- 互斥  lay-shrink="all"  自己展开时，收缩所有兄弟菜单-->
+                <!-- 互斥  lay-shrink="all"  自己展开时，收缩所有兄弟菜单-->
                 <ul class="layui-nav layui-nav-tree " lay-filter="test" lay-shrink="all">
                     <!-- target 的作用  不加target 会导致整个页面直接显示 dashboard.html  加了就会显示在右侧-->
-                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm"><span class="iconfont icon-home"></span>首页</a></li>
+                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm"><span
+                                class="iconfont icon-home"></span>首页</a></li>
                     <!-- 删除类，不能默认展开：layui-nav-itemed -->
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>  </span>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>  </span>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>  </span>发表文章</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> </span>文章类别</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> </span>文章列表</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> </span>发表文章</a></dd>
                     </li>
                     <li class="layui-nav-item">
-                        <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
+                        <a href='/user/user_info.html' target="fm"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i></span>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i></span>更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i></span>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i></span>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i></span>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i></span>重置密码</a></dd>
                         </dl>
                     </li>
-                   
+
                 </ul>
             </div>
         </div>
 
         <div class="layui-body">
             <!-- 内容主体区域     不加src 首页的右侧是空白想要加载出就直接显示  frameborder边框  src不写找不到                          -->
-           <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
+            <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
         </div>
 
         <div class="layui-footer">
