--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> </span>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> </span>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> </span>发表文章</a></dd>
+                            <dd><a href="/article/art_cate.html" target="fm"><i class="layui-icon layui-icon-app"></i> </span>文章类别</a></dd>
+                            <dd><a href="/article/art_list.html" target="fm"><i class="layui-icon layui-icon-app"></i> </span>文章列表</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i> </span>发表文章</a></dd>
                     </li>
                     <li class="layui-nav-item">
-                        <a href='/user/user_info.html' target="fm"><span class="iconfont icon-user"></span>个人中心</a>
+                        <a href='javascript:;'><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd><a href="/user/user_info.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i></span>基本资料</a></dd>
